% Check from R:
% news(db = tools:::.build_news_db_from_package_NEWS_Rd("NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{qrmdata}}
\newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 2019-12-03-1}{
  \subsection{New Features}{
    \itemize{
      \item Standard \& Poor's default data
      \item Danish fire insurance data
      \item DNB data
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item Some renamings for consistency
      \item ZCB_CAD now also in percent
    }
  }
}
\section{Changes in version 2018-04-29-1}{
  \subsection{New Features}{
    \itemize{
      \item Cryptocurrency data
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item Some renamings for consistency
    }
  }
}
\section{Changes in version 2016-01-03-1}{
  \subsection{New Features}{
    \itemize{
      \item A complete setup of all the data until 2015-12-31
    }
  }
}