@@ -1,5 +1,5 @@
 Package: qrmdata
-Version: 2019-12-03-1
+Version: 2022-05-31-1
 Encoding: UTF-8
 Title: Data Sets for Quantitative Risk Management Practice
 Description: Various data sets (stocks, stock indices, constituent data, FX,
@@ -22,8 +22,8 @@ Enhances:
 License: GPL-2 | GPL-3
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2019-12-06 11:30:06 UTC
+Date/Publication: 2022-06-01 07:10:02 UTC
 Repository/R-Forge/Project: qrmdata
-Repository/R-Forge/Revision: 38
-Repository/R-Forge/DateTimeStamp: 2019-12-03 21:32:17
-Packaged: 2019-12-03 21:50:10 UTC; rforge
+Repository/R-Forge/Revision: 47
+Repository/R-Forge/DateTimeStamp: 2022-06-01 01:30:53
+Packaged: 2022-06-01 01:41:07 UTC; rforge
