@@ -1,4 +1,4 @@
-b112281b700c80683a70c3153b0fbbcf *DESCRIPTION
+f419d033ce58920e561c1872d27dfd2a *DESCRIPTION
 eb9738256476c61a594007bf62415d1d *NAMESPACE
 0a33f1343391bf7b0afbbe10852a5fc9 *R/zzz.R
 2e7071dbad5d7b044aea63f4085e08f1 *data/CAC.rda
@@ -42,15 +42,15 @@ e8c539294424692bb8194b4c1c0f7cf2 *data/crypto.rda
 4243292c255ed3bf6b7fa9a227935dc8 *data/datalist
 7dddb467c39ff4e9d5a7da6225aa3697 *data/fire.rda
 1265ac9fc3844c797a4833fb39b4f94b *demo/00Index
-0b6aaaeb07097ec64a2cd5289a897ed8 *demo/get_data.R
-26fec8db093badf9613fba5f2099d735 *inst/NEWS.Rd
+d63def9d80d39d40cb1f363b8492e878 *demo/get_data.R
+357fab5605dc02fa624ad0e858c674f3 *inst/NEWS.Rd
 f476665714feb638eb71bf873fdffa7b *man/commodities.Rd
 d69d7056d716a2313ab134dcf4df2962 *man/crypto.Rd
 91f94ca7010251d664492dd62fdb8ff8 *man/default.Rd
-a4b74e4d8f763e205371e53533c73ae8 *man/fx.Rd
-2c7da0ee949d9fc5540b9dcf118c09d0 *man/interest_rates.Rd
+131fb3092868c8d0fdc9e6387f438ee7 *man/fx.Rd
+1b56db4674eaf6bbec49fa71c143b850 *man/interest_rates.Rd
 b881c48b3c49ba50836db423ad2e8cb0 *man/losses.Rd
-9581d2110340540bb6565e3573435edc *man/stock_indices.Rd
-7b8898d1147d7d3f23faa9e0730b9c74 *man/stock_indices_constituents.Rd
+ef1e035e68379127644ce775e681f34b *man/stock_indices.Rd
+a1a035fb0dfc64f4607e31a3433792c1 *man/stock_indices_constituents.Rd
 77d26ad499dd30191f747b753fb5522e *man/stocks.Rd
-2b2bce9ee7487c59b8a331e47c69deb0 *man/volatility.Rd
+b161ff7a6a01d7e793798fc30a88d139 *man/volatility.Rd
